fix: alignment issue fixed

--- a/src/pages/Login/components/LoginForm/style/LoginForm.scss
+++ b/src/pages/Login/components/LoginForm/style/LoginForm.scss
@@ -251,6 +251,7 @@
       }
 
       .login-header {
+        align-items: center;
         h1 {
           font-size: 24px;
         }
